[package]
name = "umesen-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "persistence", "x11"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
umesen-core = { path = "../umesen-core" }
rfd = "0.15"
indexmap = { version = "2", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"           # to access the DOM (to hide the loading text)
