[package]
name = "umesen-ui"
version = "0.0.0"
edition = "2024"

[dependencies]
egui = "0.35"
eframe = { version = "0.35", default-features = false, features = ["glow", "persistence", "x11"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
umesen-core = { path = "../umesen-core" }
rfd = "0.17"
bitflags = "2"
cpal = "0.18"
ringbuf = "0.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"           # to access the DOM (to hide the loading text)
